## Process this file with automake to produce Makefile.in

includedir = $(prefix)/include/freerdp
include_HEADERS = \
	freerdp/freerdp.h \
	freerdp/chanman.h \
	freerdp/kbd.h \
	freerdp/rdpext.h \
	freerdp/rdpset.h \
	freerdp/types_base.h \
	freerdp/types_ui.h \
	freerdp/vchan.h \
	freerdp/errinfo.h \
	freerdp/dvc.h \
	freerdp/utils/chan_plugin.h \
	freerdp/utils/datablob.h \
	freerdp/utils/memory.h \
	freerdp/utils/semaphore.h \
	freerdp/utils/unicode.h \
	freerdp/utils/wait_obj.h \
	freerdp/constants/constants.h \
	freerdp/constants/capabilities.h \
	freerdp/constants/core.h \
	freerdp/constants/crypto.h \
	freerdp/constants/license.h \
	freerdp/constants/pdu.h \
	freerdp/constants/rail.h \
	freerdp/constants/ui.h \
	freerdp/constants/vchan.h \
	freerdp/constants/window.h