## Process this file with automake to produce Makefile.in

# libchanman
libchanmandir = $(libdir)

libchanman_LTLIBRARIES = libchanman.la

libchanman_la_SOURCES = \
	libchanman.c

libchanman_la_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/include -I$(top_srcdir)/include/freerdp

libchanman_la_LDFLAGS =

# extra
EXTRA_DIST =

DISTCLEANFILES = 

