## Process this file with automake to produce Makefile.in

# libfreerdp-utils
libfreerdp_utilsdir = $(libdir)

libfreerdp_utils_LTLIBRARIES = libfreerdp-utils.la

libfreerdp_utils_la_SOURCES = \
	datablob.c \
	memory.c \
	semaphore.c \
	unicode.c \
	wait_obj.c \
	chan_plugin.c

libfreerdp_utils_la_CFLAGS = \
	-I$(top_srcdir) \
	-I$(top_srcdir)/include

libfreerdp_utils_la_LDFLAGS =

# extra
EXTRA_DIST =

DISTCLEANFILES = 

