## Process this file with automake to produce Makefile.in

# libfreerdpchanman
libfreerdpchanmandir = $(libdir)

libfreerdpchanman_LTLIBRARIES = libfreerdpchanman.la

libfreerdpchanman_la_SOURCES = \
	libfreerdpchanman.c

libfreerdpchanman_la_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/include

libfreerdpchanman_la_LDFLAGS = 

libfreerdpchanman_la_LIBDADD = ../libfreerdp/libfreerdp.la -lpthread

# extra
EXTRA_DIST =

DISTCLEANFILES = 

