## Process this file with automake to produce Makefile.in

# libfreerdpgdi
libfreerdpgdidir = $(libdir)

libfreerdpgdi_LTLIBRARIES = libfreerdpgdi.la

libfreerdpgdi_la_SOURCES = \
	gdi_color.c \
	gdi_window.c \
	libfreerdpgdi.c

libfreerdpgdi_la_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/include

libfreerdpgdi_la_LDFLAGS =

# extra
EXTRA_DIST =

DISTCLEANFILES = 

