## Process this file with automake to produce Makefile.in

# libfreerdpgdi
libfreerdpgdidir = $(libdir)

libfreerdpgdi_LTLIBRARIES = libfreerdpgdi.la

libfreerdpgdi_la_SOURCES = \
	gdi_color.c gdi_color.h \
	gdi_window.c gdi_window.h \
	gdi_32bpp.c gdi_32bpp.h \
	gdi_16bpp.c gdi_16bpp.h \
	libfreerdpgdi.c libfreerdpgdi.h

libfreerdpgdi_la_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/include

libfreerdpgdi_la_LDFLAGS =

# extra
EXTRA_DIST =

DISTCLEANFILES = 

