## Process this file with automake to produce Makefile.in

# libfreerdpgdi
libfreerdpgdidir = $(libdir)

libfreerdpgdi_LTLIBRARIES = libfreerdpgdi.la

libfreerdpgdi_la_SOURCES = \
	gdi_color.c gdi_color.h \
	gdi_window.c gdi_window.h \
	gdi_bitmap.c gdi_bitmap.h \
	gdi_region.c gdi_region.h \
	gdi_clipping.c gdi_clipping.h \
	gdi_line.c gdi_line.h \
	gdi_32bpp.c gdi_32bpp.h \
	gdi_16bpp.c gdi_16bpp.h \
	gdi_8bpp.c gdi_8bpp.h \
	libfreerdpgdi.c libfreerdpgdi.h

libfreerdpgdi_la_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/include

libfreerdpgdi_la_LDFLAGS =

libfreerdpgdi_la_LIBDADD =

# extra
EXTRA_DIST =

DISTCLEANFILES = 

