## Process this file with automake to produce Makefile.in

# libfreerdpkbd
libfreerdpkbddir = $(libdir)

libfreerdpkbd_LTLIBRARIES = libfreerdpkbd.la

libfreerdpkbd_la_SOURCES = \
	libfreerdpkbd.c

libfreerdpkbd_la_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/include

libfreerdpkbd_la_LDFLAGS =

# extra
EXTRA_DIST =

DISTCLEANFILES = 

