## Process this file with automake to produce Makefile.in

# libfreerdputils
libfreerdputilsdir = $(libdir)

libfreerdputils_LTLIBRARIES = libfreerdputils.la

libfreerdputils_la_SOURCES = \
	datablob.c \
	memory.c \
	semaphore.c \
	unicode.c

libfreerdputils_la_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/include

libfreerdputils_la_LDFLAGS =

# extra
EXTRA_DIST =

DISTCLEANFILES = 

