## Process this file with automake to produce Makefile.in

# libxkb
libxkbdir = $(libdir)

libxkb_LTLIBRARIES = libxkb.la

libxkb_la_SOURCES = \
	keyboard.h \
	locales.h \
	xkbkeymap.c xkbkeymap.h

libxkb_la_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/include -I$(top_srcdir)/include/freerdp

libxkb_la_LDFLAGS =

# extra
EXTRA_DIST =

DISTCLEANFILES = 

