## Process this file with automake to produce Makefile.in

# libkbd
libkbddir = $(libdir)

libkbd_LTLIBRARIES = libkbd.la

libkbd_la_SOURCES = \
	libkbd.c

libkbd_la_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/include -I$(top_srcdir)/include/freerdp

libkbd_la_LDFLAGS =

# extra
EXTRA_DIST =

DISTCLEANFILES = 

