## Process this file with automake to produce Makefile.in

# librfx
librfxdir = $(libdir)

librfx_LTLIBRARIES = librfx.la

librfx_la_SOURCES = \
	rfx_bitstream.c rfx_bitstream.h \
	rfx_rlgr.c rfx_rlgr.h \
	rfx_decode.c rfx_decode.h

librfx_la_CFLAGS =

librfx_la_LDFLAGS =

librfx_la_LIBDADD =

# extra
EXTRA_DIST =

DISTCLEANFILES = 

