## Process this file with automake to produce Makefile.in

# libutils
libutilsdir = $(libdir)

libutils_LTLIBRARIES = libutils.la

libutils_la_SOURCES = \
	datablob.c \
	memory.c \
	semaphore.c \
	unicode.c \
	wait_obj.c \
	chan_plugin.c

libutils_la_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/include

libutils_la_LDFLAGS =

# extra
EXTRA_DIST =

DISTCLEANFILES = 

