## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	freerdp.sln \
	wfreerdp/wf_win.cpp \
	wfreerdp/wf_event.h \
	wfreerdp/wf_win.h \
	wfreerdp/wf_color.h \
	wfreerdp/wf_event.cpp \
	wfreerdp/wfreerdp.cpp \
	wfreerdp/wf_color.cpp \
	wfreerdp/wfreerdp.vcproj \
	libfreerdp-chanman.vcproj \
	libfreerdp-utils.vcproj \
	libfreerdp-asn1.vcproj \
	libfreerdp-core.vcproj
