## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	freerdp.sln \
	wfreerdp/wf_event.h \
	wfreerdp/wf_window.h \
	wfreerdp/wf_window.c \
	wfreerdp/wf_event.c \
	wfreerdp/wfreerdp.c \
	wfreerdp/wfreerdp.vcproj \
	libfreerdp-chanman.vcproj \
	libfreerdp-utils.vcproj \
	libfreerdp-asn1.vcproj \
	libfreerdp-core.vcproj
